--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
     </div>
 
 
+    <div class="d-flex justify-content-center align-items-center mt-2">
+        <button id="scrollToTopButton" class="btn btn-primary">上へ</button>
+      </div>
+
+
 
     <!-- footer -->
   <footer class="mt-4">
